final commit for the associations app

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,9 +9,10 @@
   <strong>Body:</strong>
   <%= @post.body %>
 </p>
-<div id="comment">
+<div id="comments">
+ <% if @post.comments.present? %>
   <h1>Comments</h1>
-  
+ <% end %>
    <%= render @post.comments %>
    <h2>Add a Comment</h2>
    <%= render partial: "comments/form", locals: {comment: @post.comments.new} %>
